# sessionflow-release

./: .env.example  .gitignore  PORTABILITY.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: auth.py  config.py  events_broker.py  main.py  scheduler.py  share.py  timeutil.py
api/app/publishers/: command_publisher.py  event_publisher.py
api/app/repositories/: directories_repo.py  event_repo.py  models_repo.py  output_repo.py  remote_sessions_repo.py  schedules_repo.py  sessions_repo.py  shared_files_repo.py  task_repo.py  uploads_repo.py
api/app/routers/: auth.py  directories.py  events.py  history.py  jarvis.py  models.py  outputs.py  profile.py  push.py  remote_sessions.py  schedules.py  screen.py  sessions.py  settings.py  shared_files.py  worker.py
api/app/tests/: test_auth.py  test_directories.py  test_health.py  test_history_reads.py  test_models.py  test_remote_sessions.py  test_schedules.py  test_screen_read.py  test_sessions_audio.py  test_sessions_create.py  test_sessions_input.py  test_sessions_lifecycle.py  test_sessions_read.py  test_shared_files.py  test_sse.py
worker/: README.md  pyproject.toml
worker/sessionflow_worker/: __init__.py  __main__.py  agent_launcher.py  codex_metrics.py  command_consumer.py  dir_scanner.py  discovery.py  events.py  git_info.py  host_identity.py  jarvis.py  metrics.py  milestones.py  model_discovery.py  mongo.py  output_capture.py  push_sender.py  rabbit.py  runner.py  state.py  tmux_runtime.py  transcriber.py  usage.py
worker/sessionflow_worker/tests/: __init__.py  test_agent_launcher.py  test_codex_metrics.py  test_command_consumer.py  (+26 more)
(+85 files in other folders)
