[project]
name = "sessionflow-api"
version = "0.1.0"
description = "SessionFlow API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "motor",
    "aio-pika",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "python-multipart>=0.0.32",
    "pyjwt>=2.13.0",
    "webauthn>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: integration tests that require external services (mongo/rabbitmq)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
