[project]
name = "sessionflow-worker"
version = "0.1.0"
description = "SessionFlow Worker — manages tmux sessions on the host"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "libtmux",
    "motor",
    "aio-pika",
    "pydantic",
    "python-dotenv",
    "mlx-whisper",
    "faster-whisper",
    "pywebpush>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: usa tmux/mongo/rabbit reais",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
